# kcalc

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  CTestConfig.cmake  ChangeLog  MacOSXBundleInfo.plist.in  Mainpage.dox  Makefile.am  Makefile.in  Makefile.in.orig  Messages.sh  README  README.md  TODO  ToDo  bitbutton.cpp  bitbutton.h  calculator.cpp  calculator.h  colors.ui  config-kcalc.h.cmake  configdlg.cpp  configdlg.h  configure.in.bot  configure.in.in  confvalues.h  constants.ui  dlabel.cpp  dlabel.h  fontdlg.cpp  fontdlg.h  fonts.ui  general.ui  hisc-app-kcalc.svgz  kcalc-0.2.1.lsm  (+74 more)
appiumtests/: CMakeLists.txt  chain_results_test.py
autotests/: CMakeLists.txt  kcalc_parser_core_test.cpp
cmake/modules/: FindGMP.cmake  FindMPC.cmake  FindMPFR.cmake
doc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  commands.docbook  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml  kcalc-1.html  kcalc-2.html  kcalc-3.html  kcalc-4.html  kcalc-5.html  kcalc-6.html  kcalc-7.html  kcalc-8.html  kcalc.html  kcalc.sgml  kcalc_on_Aix.txt  kcalc_on_OSF.txt
doc/de/: Makefile.am  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.html  index.sgml  kcalclogo.tif
icons/: CMakeLists.txt
knumber/: CMakeLists.txt  Makefile.am  configure.in.in  knumber.cpp  knumber.h  knumber_base.h  knumber_cleanup_string.h  knumber_complex.cpp  knumber_complex.h  knumber_error.cpp  knumber_error.h  knumber_float.cpp  knumber_float.h  knumber_fraction.cpp  knumber_fraction.h  knumber_integer.cpp  knumber_integer.h  knumber_operators.cpp  knumber_operators.h  knumber_priv.cpp  knumber_priv.h
knumber/tests/: CMakeLists.txt  Makefile.am  knumber_aritmetic_test.cpp  knumber_bitwise_operators_test.cpp  knumber_constans_test.cpp  knumber_functions_test.cpp  knumber_integer_operators_test.cpp  knumber_misc_test.cpp  knumbertest.cpp  knumbertest.h
pics/: CMakeLists.txt
po/af/: kcalc.po
po/ar/: kcalc.po
po/ast/: kcalc.po
po/az/: kcalc.po
po/be/: kcalc.po
po/bg/: kcalc.po
po/br/: kcalc.po
po/bs/: kcalc.po
po/ca/: kcalc.po
po/ca/docs/kcalc/: commands.docbook  index.docbook
po/ca@valencia/: kcalc.po
po/cs/: kcalc.po
po/cs/docs/kcalc/: commands.docbook
po/cy/: kcalc.po
po/da/: kcalc.po
po/de/: kcalc.po
po/de/docs/kcalc/: commands.docbook  index.docbook
po/el/: kcalc.po
po/en_GB/: kcalc.po
po/eo/: kcalc.po
po/es/: kcalc.po
po/es/docs/kcalc/: commands.docbook  index.docbook
po/et/: kcalc.po
po/et/docs/kcalc/: commands.docbook  index.docbook
po/eu/: kcalc.po
po/fa/: kcalc.po
po/fi/: kcalc.po
po/fr/: kcalc.po
po/fr/docs/kcalc/: commands.docbook  index.docbook
po/ga/: kcalc.po
po/gl/: kcalc.po
po/gl/docs/kcalc/: commands.docbook  index.docbook
po/he/: kcalc.po
po/hi/: kcalc.po
po/hne/: kcalc.po
po/hr/: kcalc.po
po/hu/: kcalc.po
po/ia/: kcalc.po
po/id/: kcalc.po
po/is/: kcalc.po
po/it/: kcalc.po
po/it/docs/kcalc/: commands.docbook  index.docbook
po/ja/: kcalc.po
po/ka/: kcalc.po
po/kk/: kcalc.po
po/km/: kcalc.po
po/ko/: kcalc.po
po/lt/: kcalc.po
po/lt/docs/kcalc/: commands.docbook  index.docbook
po/lv/: kcalc.po
po/mk/: kcalc.po
po/mr/: kcalc.po
po/ms/: kcalc.po
po/nb/: kcalc.po
po/nds/: kcalc.po
po/ne/: kcalc.po
po/nl/: kcalc.po
po/nl/docs/kcalc/: commands.docbook  index.docbook
po/nn/: kcalc.po
po/oc/: kcalc.po
po/pa/: kcalc.po
po/pl/: kcalc.po
po/pt/: kcalc.po
po/pt/docs/kcalc/: commands.docbook  index.docbook
po/pt_BR/: kcalc.po
po/pt_BR/docs/kcalc/: commands.docbook  index.docbook
po/ro/: kcalc.po
po/ru/: kcalc.po
po/ru/docs/kcalc/: commands.docbook  index.docbook
po/sa/: kcalc.po
po/se/: kcalc.po
po/sk/: kcalc.po
po/sl/: kcalc.po
po/sq/: kcalc.po
po/sr/: kcalc.po
po/sr/docs/kcalc/: commands.docbook  index.docbook  l10n-track
po/sr@ijekavian/: kcalc.po
po/sr@ijekavianlatin/: kcalc.po
po/sr@latin/: kcalc.po
po/sr@latin/docs/kcalc/: commands.docbook  index.docbook
po/sv/: kcalc.po
po/sv/docs/kcalc/: commands.docbook  index.docbook
po/ta/: kcalc.po
po/tg/: kcalc.po
po/th/: kcalc.po
po/tr/: kcalc.po
po/tr/docs/kcalc/: commands.docbook  index.docbook
po/ug/: kcalc.po
po/uk/: kcalc.po
po/uk/docs/kcalc/: commands.docbook  index.docbook
po/uz/: kcalc.po
po/uz@cyrillic/: kcalc.po
po/wa/: kcalc.po
po/xh/: kcalc.po
po/zh_CN/: kcalc.po
po/zh_TW/: kcalc.po
snap/: snapcraft.yaml
snap/local/: dontusefullpathinsymlink.patch
src/: CMakeLists.txt  constants.ui  kcalc.cpp  kcalc_bitbutton.cpp  kcalc_const_button.cpp  kcalc_const_menu.h  kcalc_parser.cpp  kcalc_parser.h
tests/: Makefile  Makefile.am  knumbertest.cpp
